--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color: white;box-shadow: inset 0px 0px 40px 40px #0000004a;">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -61,17 +61,19 @@
 
 
 <div class="classicLogo" align="center" id="classicCof" >Классика</div>
-<div class="classic" >
+<div class="classic4" >
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(6313304092.jpg)"></div><div class="description" align="center"><div class="coffeeName">Двойной эспрессо</div><div class="coffeeDescription"><div>280 мл - 120 руб.</div><div class="titata">Простота - это сила. Реально феррари для вашего мозга</div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(americano.jpg)"></div><div class="description" align="center"><div class="coffeeName">Американо</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>380 мл - 180 руб.</div><div class="titata"></div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(капуч.jpg)"></div><div class="description" align="center"><div class="coffeeName">Капучино</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>380 мл - 180 руб.<br>480 мл - 230 руб.</div><div class="titata"></div></div></div></div>
  
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(b9868966d39ff1b79559ea13a5c55116.jpg)"></div><div class="description" align="center"><div class="coffeeName">Латте</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>380 мл - 180 руб.<br>480 мл - 230 руб.</div><div class="titata">Кофе, который нашел свою любовь в молоке. Романтичный и нежный, как итальянский фильм.</div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(b9868966d39ff1b79559ea13a5c55116.jpg)"></div><div class="description" align="center"><div class="coffeeName">Латте</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>380 мл - 180 руб.<br>480 мл - 230 руб.</div><div class="titata">Кофе, который нашел свою любовь в молоке</div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(flat.jpeg)"></div><div class="description" align="center"><div class="coffeeName">Флэт Уайт</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>480 мл - 260 руб.</div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(c0b126272225320177a0c1a58a8682b5926dbe54.jpg)"></div><div class="description" align="center"><div class="coffeeName">Латте Макиато</div><div class="coffeeDescription"></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(c0b126272225320177a0c1a58a8682b5926dbe54.jpg)"></div><div class="description" align="center"><div class="coffeeName">Латте Макиато</div><div class="coffeeDescription"><div>380 мл - 270р</div><div class="titata">Кофе, который нашел свою любовь в молоке. Романтичный и нежный, как итальянский фильм.</div></div></div></div>
 
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(w09zkvl5qqu1z0xe7baccmft9k3kezz1.jpeg)"></div><div class="description" align="center"><div class="coffeeName">Гляссе</div><div class="coffeeDescription"><div>380 мл - 320р</div><div class="titata">Кофе с мороженым</div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(affogato.jpg)"></div><div class="description" align="center"><div class="coffeeName">Аффогато</div><div class="coffeeDescription"><div>220р</div><div class="titata">Мороженое с кофе</div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(ebe121e3-332f-41a8-af96-0ebfc10fb8c6.jpg)"></div><div class="description" align="center"><div class="coffeeName">Моккачино</div><div class="coffeeDescription"><div>380 мл - 290 руб.</div><div class="titata">Шоколадная бомба! Вкуснее, чем пирожное, и сильнее, чем шоколадный фонтан.</div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(w09zkvl5qqu1z0xe7baccmft9k3kezz1.jpeg)"></div><div class="description" align="center"><div class="coffeeName">Гляссе</div><div class="coffeeDescription"><div></div><div class="titata"></div></div></div></div>
+
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(c63e5e140b6f5747c6a893a650ef0949.jpeg)"></div><div class="description" align="center"><div class="coffeeName">РАФ</div><div class="coffeeDescription"><div>380 мл - 290р</div><div style="margin-top:4%; background-color:rgba(94, 21, 33, 0.516); color:white; ;border:dashed 5px white;bottom: 0px;"><a href="RAF.html" >НАЖМИТЕ ЧТОБЫ<br>ПОСМОТРЕТЬ<br>ВСЕ РАФЫ,,,</a></div></div></div></div>
 
 </div>
@@ -98,7 +100,7 @@
         <div class="classicCard" ><div class="imgCoffee" style="background-image: url(1645032597_32-balthazar-club-p-kokteil-morozhenoe-35.jpg)"></div><div class="description" align="center"><div class="coffeeName">Коктейль с мороженым</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
         <div class="classicCard" ><div class="imgCoffee" style="background-image: url(4909_big.jpg)"></div><div class="description" align="center"><div class="coffeeName">Биливикс</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
  
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(1645474138_32-balthazar-club-p-goryachii-shokolad-34.jpg)"></div><div class="description" align="center"><div class="coffeeName">Горячий шоколад</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(1645474138_32-balthazar-club-p-goryachii-shokolad-34.jpg)"></div><div class="description" align="center"><div class="coffeeName">Горячий шоколад</div><div class="coffeeDescription"><div>380 мл - 235р</div><div class="titata"></div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(cacao.png)"></div><div class="description" align="center"><div class="coffeeName">Какао</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
    
 </div>
