--- a/siropy.html
+++ b/siropy.html
@@ -18,22 +18,6 @@
     <div id="simg"><img src="437147.jpg"></div>
     <div id="stext" ><div>В каждом человеке намешано всего понемножку, а жизнь выдавливает из этой смеси что-нибудь одно на поверхность</div><div align="right" style="font-size: 3vw;"> <s style="font-size: 2vw;">ауф</s><br>Стругацкие</div></div>
 </div>
-Жасмин 
-Яблочный пирог
-Тирамису
-Имбирный пряник
-Бейлис
-Чизкейк
-Пина колада
-Миндальное печенье
-Коньячный
-
-Синнабон
-Глинтвейн
-Лаванда
-Пончик
-Роза
-Лимонный пирог
 
 <style>
     form {
@@ -83,13 +67,14 @@
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(qr9edq0u1fbpn6vy6miy3gvlxtxaenio.png)"></div><div class="description2" align="center"><div class="coffeeName2">Кокос</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(v8ly6toa3sz5xwsv413z2oxpkmi2t1uf.png)"></div><div class="description2" align="center"><div class="coffeeName2">Корица</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(y1vidv8qjuhp66eks5g9sh3cp43zht9t.png)"></div><div class="description2" align="center"><div class="coffeeName2">Крем брюле</div></div></div>
-  <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(4oxocpnv1w1oqwavmpkinstydv3l1kh3.png)"></div><div class="description2" align="center"><div class="coffeeName2">Солёная карамель</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(mf12csxsakn039gt59haa5eqv51me9vu.png)"></div><div class="description2" align="center"><div class="coffeeName2">Шоколад</div></div></div>
-  <div class="SiropCard" style="width:120%"><div class="imgCoffee2" style="background-image: url(48e7izo5qjqlde7iju0tcwhgl3scm2im.png)"></div><div class="description2" align="center"><div class="coffeeName2">Ирландский крем</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(63ml0cm862ghwd68q2n31end2yhwo4zg.png)"></div><div class="description2" align="center"><div class="coffeeName2">Кленовый</div></div></div>
 
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(u577zr4y5lqj1hf1qh2wsgj3dpsxglc3.png)"></div><div class="description2" align="center"><div class="coffeeName2">Мята</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(u577zr4y5lqj1hf1qh2wsgj3dpsxglc3.png)"></div><div class="description2" align="center"><div class="coffeeName2">Мохито</div></div></div>
+  <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(4oxocpnv1w1oqwavmpkinstydv3l1kh3.png)"></div><div class="description2" align="center"><div class="coffeeName2">Солёная карамель</div></div></div>
+  <div class="SiropCard" style="width:120%"><div class="imgCoffee2" style="background-image: url(48e7izo5qjqlde7iju0tcwhgl3scm2im.png)"></div><div class="description2" align="center"><div class="coffeeName2">Ирландский крем</div></div></div>
+
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(l0hb65e0p78hrhdo0v23kxozhk5ng4he.png)"></div><div class="description2" align="center"><div class="coffeeName2">Баббл гам</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(25vmsk1d07gw55jc2aoamx8krrkos6dk.png)"></div><div class="description2" align="center"><div class="coffeeName2">Попкорн</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(islxca805epbmk9hw82k6hu9xim3ono3.png)"></div><div class="description2" align="center"><div class="coffeeName2">Кола</div></div></div>
@@ -133,9 +118,10 @@
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(xfoc5ti4puhc2n753fo9p4w4ervhrpig.png)"></div><div class="description2" align="center"><div class="coffeeName2">Манго</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(fc541hh41bl7ihtmgz01voy4o8x9umr3.png)"></div><div class="description2" align="center"><div class="coffeeName2">Гранат</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(4u3a08pv58043vbi1qoa2oxz1nmud6ow.png)"></div><div class="description2" align="center"><div class="coffeeName2">Зелёная дыня</div></div></div>
-  <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(z1c5q0tmgu5goktt72hzwkkksigiw05l.png)"></div><div class="description2" align="center"><div class="coffeeName2">Зелёный банан</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(lseb4ppcf1gt9358jqal7rrsq73xbuhh.png)"></div><div class="description2" align="center"><div class="coffeeName2">Маракуйа</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(8c4lox1fzveftujlzh3n6e0my2sryf4o.png)"></div><div class="description2" align="center"><div class="coffeeName2">Киви</div></div></div>
+  <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(z1c5q0tmgu5goktt72hzwkkksigiw05l.png)"></div><div class="description2" align="center"><div class="coffeeName2">Зелёный банан</div></div></div>
+
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(1e6zw3cn87g5ft6py6r7p9q3ve38irrn.png)"></div><div class="description2" align="center"><div class="coffeeName2">Личи</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(26jo5at24rt8y4c167qmi4s7ne0f1pf4.png)"></div><div class="description2" align="center"><div class="coffeeName2">Каштан</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(w81un1wadcn174w09kqof0zsewrcynn3.png)"></div><div class="description2" align="center"><div class="coffeeName2">Пряная тыква</div></div></div>
@@ -145,8 +131,11 @@
   </div>
 
   <div class="classicLogo2" align="center" >Коктейльные</div>
-  <div class="vseSiropy">
-    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(5n5pksjr6dowrutszgapgvjcdrbqpuhb.png)"></div><div class="description2" align="center"><div class="coffeeName2">Огурец</div></div></div>
+  <div class="vseSiropy4">
+    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(ls5tpbjygw2owqs7eejp1u5u39tnesho.png)"></div><div class="description2" align="center"><div class="coffeeName2">Бейлиз</div></div></div>
+    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(cns6hqazerlr4faax754jzc58pjdliaa.png)"></div><div class="description2" align="center"><div class="coffeeName2">Пина колада</div></div></div>
+    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(zgj935rjhchor1ot2wsxi3u6bmjmb40q.png)"></div><div class="description2" align="center"><div class="coffeeName2">Глинтвейн</div></div></div>
+    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(lm6jeq7v0q4qmlm0dq0cccyme6n0upqe.png)"></div><div class="description2" align="center"><div class="coffeeName2">Коньячный</div></div></div>
 
     </div>
 <div class="classicLogo2" align="center" >Вкус десертов</div>
@@ -160,12 +149,14 @@
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(z8w7n8bry9z8kxl5h1l4o9vs1j9gwdnu.png)"></div><div class="description2" align="center"><div class="coffeeName2">Лимонный пирог</div></div></div>
   </div>
   <div class="classicLogo2" align="center">Цветочные</div>
-  <div class="vseSiropy">
+  <div class="vseSiropy4">
     <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(1b5pw35lw3tp961r67h3efkqbdjyp3jy.png)"></div><div class="description2" align="center"><div class="coffeeName2">Лаванда</div></div></div>
     <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(fu6f0d25j0enrig5wev9w07oveze71x2.png)"></div><div class="description2" align="center"><div class="coffeeName2">Жасмин</div></div></div>
     <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(09m74z09h3rwoub2b6hifkktlapfks80.png)"></div><div class="description2" align="center"><div class="coffeeName2">Гвоздика</div></div></div>
     <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(g1k6tmekw1zs7g7wlkhcwh8i838q2j75.png)"></div><div class="description2" align="center"><div class="coffeeName2">Роза</div></div></div>
-    </div>
+    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(lx638en9wi30dvbk3vpo0ocazatdduwo.png)"></div><div class="description2" align="center"><div class="coffeeName2">Можжевельник</div></div></div>
+
+  </div>
 
 </body>
 </html>
