--- a/RAF.html
+++ b/RAF.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     
 </head>
-<body>
+<body style="background-image: url(1618484637_63-funart_pro-p-oboi-fon-rozovo-sirenevii-fon-64.jpg);">
 
 
 
