--- a/cakes.html
+++ b/cakes.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="styles.css">
     
 </head>
-<body>
+<body style="background-image: url(finca-182-_1.jpg);">
 
 
 
 
     <div class="am" ><a href="index.html" id="glavnaya" align="center"><b id="vernutsya">Вернуться<br>на<br>главную</b></a></div>
-    <div class="classicLogo" align="center" id="classicCof" style="margin:3% 0">ДЕСЕРТЫ</div>
-<div class="classic" >        <div class="classicCard"><div class="imgCoffee" style="background-image: url(tiramisu-maskarpone-0.jpg)"></div><div class="description" align="center"><div class="coffeeName">Тирамису</div><div class="coffeeDescription"><div>280 руб.</div><div class="titata">Тирамису учит нас, что даже самые простые ингредиенты могут творить волшебство</div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(tort-rikotta-s-grushej-2-0.jpg)"></div><div class="description" align="center"><div class="coffeeName">Риккота и грушей</div><div class="coffeeDescription"><div>260 руб.</div><div class="titata">Сочетание, которое заставляет тебя задуматься о жизни... до того, как ты съешь еще один и забудешь о всех проблемах</div></div></div></div>
+    <div class="classicLogo" align="center" id="classicCof" style="margin:3% auto; width: 30%;background-color:  white;box-shadow: 0 6px 4px -4px rgba(0, 0, 0, 0.5)">ДЕСЕРТЫ</div>
+<div class="classic" >        <div class="classicCard"><div class="imgCoffee" style="background-image: url(tiramisu-maskarpone-0.jpg)"></div><div class="description" align="center"><div class="coffeeName">Тирамису</div><div class="coffeeDescription"><div>280 руб.</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(tort-rikotta-s-grushej-2-0.jpg)"></div><div class="description" align="center"><div class="coffeeName">Риккота и грушей</div><div class="coffeeDescription"><div>260 руб.</div><div class="titata"></div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(Tort_Yagodnyj_miks_s_maskarpone_1610_kg_14_porcz4_DF-0.jpg);"></div><div class="description" align="center"><div class="coffeeName">Микс маскарпоне с ягодами</div><div class="coffeeDescription"><div>240 руб.</div><div class="titata"></div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(tort-red-velvet-3-0.jpg)"></div><div class="description" align="center"><div class="coffeeName">Красный бархат</div><div class="coffeeDescription"><div>240 руб.</div><div></div></div></div></div>
 
@@ -23,9 +23,9 @@
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(pirozhnoe-grafskie-razvaliny-2-1.jpg)"></div><div class="description" align="center"><div class="coffeeName">Графские развалины</div><div class="coffeeDescription"><div>240 руб.</div><div class="titata">Всегда напоминает, что жизнь непредсказуема и хаотична. И вкусна,,,</div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(tort-mandarinovyj-s-merengoj-2-0.jpg)"></div><div class="description" align="center"><div class="coffeeName">Мандариновый тортик</div><div class="coffeeDescription"><div>240 руб.</div><div class="titata"></div></div></div></div>
 
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(tort-smetannik-12p-0.jpg)"></div><div class="description" align="center"><div class="coffeeName">Сметанник</div><div class="coffeeDescription"><div>210 руб.<br>380 мл -<br>480 мл - 230 руб.</div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(tartaletka_malinovaya-0.jpg)"></div><div class="description" align="center"><div class="coffeeName">Тарталетка с малиной</div><div class="coffeeDescription"><div>210 руб.</div><div class="titata">Кисло-сладкая малина и нежный фисташковый вкус - идеальное сочетание</div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(f35ddae2199bd16170cbde7e03fb8c80-1100x825.jpg)"></div><div class="description" align="center"><div class="coffeeName">Тарталетка с фисташкой и малиной</div><div class="coffeeDescription"><p><br>210 руб.<br><br>Кисло-сладкая малина и нежный фисташковый вкус - идеальное сочетание</p></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(tort-smetannik-12p-0.jpg)"></div><div class="description" align="center"><div class="coffeeName">Сметанник</div><div class="coffeeDescription"><div>210 руб.</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(tartaletka_malinovaya-0.jpg)"></div><div class="description" align="center"><div class="coffeeName">Тарталетка с малиной</div><div class="coffeeDescription"><div>210 руб.</div><div class="titata">Постная и самое главное мега вкусная тарталетка</div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(f35ddae2199bd16170cbde7e03fb8c80-1100x825.jpg)"></div><div class="description" align="center"><div class="coffeeName">Тарталетка с фисташкой и малиной</div><div class="coffeeDescription"><p><br>210 руб.<br><br></p></div></div></div>
 
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(ponchik-s-rozovoj-glazuryu-i-posypkoj-iz-belogo-shokolada-320x320.jpg)"></div><div class="description" align="center"><div class="coffeeName">Пончик с панакотой</div><div class="coffeeDescription"><p><br>110 руб.<br><br>Раф, который хочет почувствовать себя на курорте. Летний, свежий и сладкий.</p></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(donat-glazirovannyj-s-shokoladnoj-nachinkoj-320x320.jpg)"></div><div class="description" align="center"><div class="coffeeName">Пончик с шоколадом</div><div class="coffeeDescription"><p><br>110 руб.</p></div></div></div>
