--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
   
   
   <div class="btn-up btn-up_hide"></div>
-    <!-- png-transparent-jamaican-blue-mountain-coffee-kona-coffee-instant-coffee-kona-district-hawaii-coffee-coffee-cocoa-bean-superfood.png -->
     <div class="a">
-        <div id="aslogan">Переживи понедельник,<br>выпей кофе.</div>
+        <div id="aslogan">Осторожно,<br>вызываем зависимость </div>
         <div id="shapka" >
             <a href="index.html#c" class="button" class="shapkaButton">Напитки разные</a>
             <a href="https://www.youtube.com/watch?v=HIcSWuKMwOw" target="_blank" class="button" class="shapkaButton">Молоко</a>
@@ -62,19 +61,19 @@
 
 <div class="classicLogo" align="center" id="classicCof" >Классика</div>
 <div class="classic4" >
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(6313304092.jpg)"></div><div class="description" align="center"><div class="coffeeName">Двойной эспрессо</div><div class="coffeeDescription"><div>280 мл - 120 руб.</div><div class="titata">Простота - это сила. Реально феррари для вашего мозга</div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(americano.jpg)"></div><div class="description" align="center"><div class="coffeeName">Американо</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>380 мл - 180 руб.</div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(капуч.jpg)"></div><div class="description" align="center"><div class="coffeeName">Капучино</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>380 мл - 180 руб.<br>480 мл - 230 руб.</div><div class="titata"></div></div></div></div>
- 
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(b9868966d39ff1b79559ea13a5c55116.jpg)"></div><div class="description" align="center"><div class="coffeeName">Латте</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>380 мл - 180 руб.<br>480 мл - 230 руб.</div><div class="titata">Кофе, который нашел свою любовь в молоке</div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(flat.jpeg)"></div><div class="description" align="center"><div class="coffeeName">Флэт Уайт</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>480 мл - 260 руб.</div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(c0b126272225320177a0c1a58a8682b5926dbe54.jpg)"></div><div class="description" align="center"><div class="coffeeName">Латте Макиато</div><div class="coffeeDescription"><div>380 мл - 270р</div><div class="titata">Кофе, который нашел свою любовь в молоке. Романтичный и нежный, как итальянский фильм.</div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(6313304092.jpg)"></div><div class="description" align="center"><div class="coffeeName">Двойной эспрессо</div><div class="coffeeDescription"><div>280 мл - 120 руб.</div><div class="titata">Является идеальной основой для кофейных напитков</div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(americano.jpg)"></div><div class="description" align="center"><div class="coffeeName">Американо</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>380 мл - 180 руб.</div><div class="titata">Сбалансированный и насыщенный вкус является идеальным напитком для любителей кофе</div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(капуч.jpg)"></div><div class="description" align="center"><div class="coffeeName">Капучино</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>380 мл - 180 руб.<br>480 мл - 230 руб.</div><div class="titata">Отличается густой молочной пенкой, которая делает его нежнейшим.</div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(flat.jpeg)"></div><div class="description" align="center"><div class="coffeeName">Флэт Уайт</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>480 мл - 260 руб.</div><div class="titata">Крепче капучино раза в два. Для кофеманов с <s>крепким</s> большим сердцем</div></div></div></div>
+
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(b9868966d39ff1b79559ea13a5c55116.jpg)"></div><div class="description" align="center"><div class="coffeeName">Латте</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>380 мл - 180 руб.<br>480 мл - 230 руб.</div><div class="titata">Для любителей легкого кофе. Поможет расслабиться и насладиться жизнью</div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(c0b126272225320177a0c1a58a8682b5926dbe54.jpg)"></div><div class="description" align="center"><div class="coffeeName">Латте Макиато</div><div class="coffeeDescription"><div>380 мл - 270р</div><div class="titata">Отличается мягким, нежным вкусом благодаря огромной доле молока в напитке. Скорее молочный, чем кофейный</div></div></div></div>
 
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(w09zkvl5qqu1z0xe7baccmft9k3kezz1.jpeg)"></div><div class="description" align="center"><div class="coffeeName">Гляссе</div><div class="coffeeDescription"><div>380 мл - 320р</div><div class="titata">Кофе с мороженым</div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(affogato.jpg)"></div><div class="description" align="center"><div class="coffeeName">Аффогато</div><div class="coffeeDescription"><div>220р</div><div class="titata">Мороженое с кофе</div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(ebe121e3-332f-41a8-af96-0ebfc10fb8c6.jpg)"></div><div class="description" align="center"><div class="coffeeName">Моккачино</div><div class="coffeeDescription"><div>380 мл - 290 руб.</div><div class="titata">Шоколадная бомба! Вкуснее, чем пирожное, и сильнее, чем шоколадный фонтан.</div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(ebe121e3-332f-41a8-af96-0ebfc10fb8c6.jpg)"></div><div class="description" align="center"><div class="coffeeName">Моккачино</div><div class="coffeeDescription"><div>380 мл - 290 руб.</div><div class="titata">Кофейно-шоколадная бомба, не оставит равнодушными кофеманов и сладкоежек</div></div></div></div>
 
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(c63e5e140b6f5747c6a893a650ef0949.jpeg)"></div><div class="description" align="center"><div class="coffeeName">РАФ</div><div class="coffeeDescription"><div>380 мл - 290р</div><div style="margin-top:4%; background-color:rgba(94, 21, 33, 0.516); color:white; ;border:dashed 5px white;bottom: 0px;"><a href="RAF.html" >НАЖМИТЕ ЧТОБЫ<br>ПОСМОТРЕТЬ<br>ВСЕ РАФЫ,,,</a></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(c63e5e140b6f5747c6a893a650ef0949.jpeg)"></div><div class="description" align="center"><div class="coffeeName">РАФ</div><div class="coffeeDescription"><div>380 мл - 290р</div><div style="margin-top:4%; background-color:rgba(94, 21, 33, 0.516); color:white; ;border:dashed 5px white;bottom: 0px; "><a href="RAF.html" >НАЖМИТЕ ЧТОБЫ<br>ПОСМОТРЕТЬ<br>ВСЕ РАФЫ,,,</a></div></div></div></div>
 
 </div>
 
