--- a/siropy.html
+++ b/siropy.html
@@ -13,7 +13,7 @@
 
 
 <div class="am" ><a href="index.html" id="glavnaya" align="center"><b id="vernutsya">Вернуться<br>на<br>главную</b></a></div>
-<div class="classicLogo" align="center" id="classicCof" style="margin:3% 0;">СИРОПЫ</div>
+<div class="classicLogo" align="center" id="classicCof" style="margin:3% auto; width: 30%;background-color:  white;box-shadow: 0 6px 4px -4px rgba(0, 0, 0, 0.5);">СИРОПЫ</div>
 <div id="s" style="background-color: rgba(255, 255, 255, 0.564);">
     <div id="simg"><img src="437147.jpg"></div>
     <div id="stext" ><div>В каждом человеке намешано всего понемножку, а жизнь выдавливает из этой смеси что-нибудь одно на поверхность</div><div align="right" style="font-size: 3vw;"> <s style="font-size: 2vw;">ауф</s><br>Стругацкие</div></div>
@@ -71,7 +71,6 @@
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(63ml0cm862ghwd68q2n31end2yhwo4zg.png)"></div><div class="description2" align="center"><div class="coffeeName2">Кленовый</div></div></div>
 
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(u577zr4y5lqj1hf1qh2wsgj3dpsxglc3.png)"></div><div class="description2" align="center"><div class="coffeeName2">Мята</div></div></div>
-  <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(u577zr4y5lqj1hf1qh2wsgj3dpsxglc3.png)"></div><div class="description2" align="center"><div class="coffeeName2">Мохито</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(4oxocpnv1w1oqwavmpkinstydv3l1kh3.png)"></div><div class="description2" align="center"><div class="coffeeName2">Солёная карамель</div></div></div>
   <div class="SiropCard" style="width:120%"><div class="imgCoffee2" style="background-image: url(48e7izo5qjqlde7iju0tcwhgl3scm2im.png)"></div><div class="description2" align="center"><div class="coffeeName2">Ирландский крем</div></div></div>
 
@@ -101,9 +100,9 @@
  
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(jmd4j4qjnqjkhfy6jkpzowg9k4qnx5hf.png)"></div><div class="description2" align="center"><div class="coffeeName2">Клубника</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(42mbdvvhfwi9n1fyuh1e4uda3nahc1a5.png)"></div><div class="description2" align="center"><div class="coffeeName2">Земляника</div></div></div>
-  <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(l0iijnachpt9ocwt2z4ct4ugknwj887j.png)"></div><div class="description2" align="center"><div class="coffeeName2">Лесные ягоды</div></div></div>
+  <div class="SiropCard" style="width:120%"><div class="imgCoffee2" style="background-image: url(l0iijnachpt9ocwt2z4ct4ugknwj887j.png)"></div><div class="description2" align="center"><div class="coffeeName2">Лесные ягоды</div></div></div>
+    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(skdui1zze5ltp3b7hb4f1kohl0mvu110.png)"></div><div class="description2" align="center"><div class="coffeeName2">Смородина</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(u2qnxf8waqkekxtapbfn4axxor4wvgk5.png)"></div><div class="description2" align="center"><div class="coffeeName2">Черника</div></div></div>
-  <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(skdui1zze5ltp3b7hb4f1kohl0mvu110.png)"></div><div class="description2" align="center"><div class="coffeeName2">Черная смородина</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(n8g4213z9tnm311on1rggoekmyivbgmg.png)"></div><div class="description2" align="center"><div class="coffeeName2">Клюква</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(a5d63qhrmoo27qdfuu4wmoj7x450yo7k.png)"></div><div class="description2" align="center"><div class="coffeeName2">Изабелла</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(wto37qlg5k3wnblcx4u9n41yr5woloc4.png)"></div><div class="description2" align="center"><div class="coffeeName2">Арбуз</div></div></div>
@@ -158,6 +157,8 @@
     <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(lx638en9wi30dvbk3vpo0ocazatdduwo.png)"></div><div class="description2" align="center"><div class="coffeeName2">Можжевельник</div></div></div>
 
   </div>
-
+<br>
+<br>
+.
 </body>
 </html>
