--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
       </div>
     <div align="center" class="classicLogo">Матча</div>
     <div class="classic3" >
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(recepty-chaya-latte-v-domashnix-usloviyax-kak-gotovit-chaj-s-pryanostyami-3-1024x1002.jpg)"></div><div class="description" align="center"><div class="coffeeName">Матча</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(unnamed-file.jpg)"></div><div class="description" align="center"><div class="coffeeName">Фисташковая</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(blue.png)"></div><div class="description" align="center"><div class="coffeeName">Голубая</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(recepty-chaya-latte-v-domashnix-usloviyax-kak-gotovit-chaj-s-pryanostyami-3-1024x1002.jpg)"></div><div class="description" align="center"><div class="coffeeName">Матча</div><div class="coffeeDescription"><div>290р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(unnamed-file.jpg)"></div><div class="description" align="center"><div class="coffeeName">Фисташковая</div><div class="coffeeDescription"><div>290р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(blue.png)"></div><div class="description" align="center"><div class="coffeeName">Голубая</div><div class="coffeeDescription"><div>290р</div><div class="titata"></div></div></div></div>
   
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(Pink-latte-la-bebida-caliente-de-betabel-que-promete-eliminar-el-insomnio_1.jpg)"></div><div class="description" align="center"><div class="coffeeName">Красная</div><div class="coffeeDescription"></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(Pink-latte-la-bebida-caliente-de-betabel-que-promete-eliminar-el-insomnio_1.jpg)"></div><div class="description" align="center"><div class="coffeeName">Красная</div><div class="coffeeDescription">290р</div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(maxresdefault.jpg)"></div><div class="description" align="center"><div class="coffeeName">Лавандовая</div><div class="coffeeDescription"></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(FN_St-Patricks-Day-Mint-Schnapps-Shakes_s4x3.jpg)"></div><div class="description" align="center"><div class="coffeeName">Мятная</div><div class="coffeeDescription"></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(smuzi-marakuyya-banan-.jpg)"></div><div class="description" align="center"><div class="coffeeName">Желтая</div><div class="coffeeDescription"></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(FN_St-Patricks-Day-Mint-Schnapps-Shakes_s4x3.jpg)"></div><div class="description" align="center"><div class="coffeeName">Мятная</div><div class="coffeeDescription">290р</div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(smuzi-marakuyya-banan-.jpg)"></div><div class="description" align="center"><div class="coffeeName">Желтая</div><div class="coffeeDescription">290р</div></div></div>
 
 </div>
 
