--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color: white;box-shadow: inset 0px 0px 40px 40px #0000004a;">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -127,7 +127,7 @@
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(blue.png)"></div><div class="description" align="center"><div class="coffeeName">Голубая</div><div class="coffeeDescription"><div>290р</div><div class="titata"></div></div></div></div>
   
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(Pink-latte-la-bebida-caliente-de-betabel-que-promete-eliminar-el-insomnio_1.jpg)"></div><div class="description" align="center"><div class="coffeeName">Красная</div><div class="coffeeDescription">290р</div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(maxresdefault.jpg)"></div><div class="description" align="center"><div class="coffeeName">Лавандовая</div><div class="coffeeDescription"></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(maxresdefault.jpg)"></div><div class="description" align="center"><div class="coffeeName">Лавандовая</div><div class="coffeeDescription">290р</div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(FN_St-Patricks-Day-Mint-Schnapps-Shakes_s4x3.jpg)"></div><div class="description" align="center"><div class="coffeeName">Мятная</div><div class="coffeeDescription">290р</div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(smuzi-marakuyya-banan-.jpg)"></div><div class="description" align="center"><div class="coffeeName">Желтая</div><div class="coffeeDescription">290р</div></div></div>
 
